# ssemu

./: Cargo.toml  README.md  main.asm
src/: args.rs  errors.rs  interface.rs  main.rs  test_utils.rs
src/assemble/: errors.rs  mod.rs  tests.rs
src/run/: debug.rs  errors.rs  execution.rs  mod.rs  output.rs  srcfile.rs
src/run/debug/: commands.rs  debug_commands.rs  mod.rs  modify.rs  print.rs  print_debug.rs  utils.rs
src/run/debug/tests/: commands_tests.rs  mod.rs  modify_tests.rs  print_tests.rs  utils_tests.rs
src/run/tests/: mod.rs  output_tests.rs  srcfile_tests.rs
