[package]
name = "ssemu"
version = "0.1.0"
authors = ["Jason Alexander <jasonalexander.dev@gmail.com>"]
edition = "2021"
description = "An emulation/asm command line tool of the Manchester SSEM 'Baby'"
readme = "README.md"
repository = "https://github.com/jasonalexander-ja/SSEMBabyEmulator"
license = "MIT"
keywords = ["vintage_computing", "emulation"]
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baby-emulator = "0.1.4"
clap = { version = "4.3.23", features = ["derive"] }
colored = "2.0.4"

